--- a/src/main/webapp/page.xhtml
+++ b/src/main/webapp/page.xhtml
@@ -10,7 +10,8 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-            zalogowałeś się, 
-            <h:outputLabel value="#{data.message}" />
+        zalogowałeś się,
+        <h:outputText value="#{sessionScope.login}" />
+
     </h:body>
 </html>
