--- a/src/main/webapp/page.xhtml
+++ b/src/main/webapp/page.xhtml
@@ -5,11 +5,16 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	>
+    <f:metadata>
+        <f:viewParam name="fentry" value="#{wall.message}" />
+    </f:metadata>
+    
 <body>
          <c:if test="#{not empty atrybut.getLogin()}">
              <p align="center">Logged as: #{atrybut.getLogin()}</p>
              <h:form>
-                 <h:inputText id="input" binding="#{entry}" size="150"/>
+                 <h:inputText label="your message" id="input" binding="#{entry}" required="true" size="150"/>
+                 <h:message for="fentry" />
                  <h:commandButton value="Submit" action="#{data.newEntry(atrybut.getLogin(), entry.value)}" />
              </h:form>
              <h:form>
