--- a/src/main/webapp/info.xhtml
+++ b/src/main/webapp/info.xhtml
@@ -21,7 +21,7 @@
             </form>         
 
              <h:form>
-                 <h:commandButton value="Back" action="page.xhtml" />
+                 <h:commandButton value="Back" action="page?faces-redirect=true" />
              </h:form>
         </c:if>
 
